# abuse-detection-learning

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
dbt/: dbt_project.yml
dbt/models/: sources.yml
docs/: README.md  agent_workflow.md  evaluation_flow.md  phase2_learnings.md  phase3_5_learnings.md  phase6_versioning.md  pre_implementation_checklist.md  roadmap.md  tasks.md
docs/design/: evaluation_harness_architecture_mermaid_ja.md  production_scoring_architecture_mermaid_ja.md
docs/learning/: design_map.md  learning_review.md  production_gap_analysis.md
docs/planning/: roadmap.md  tasks.md
docs/progress/: 2026-05-02.md  (+4 more)
fixtures/: feature_rows_from_sqlite.csv  feature_rows_sample.csv  feature_rows_timeseries.csv
notebooks/: 01_evaluate_scoring.ipynb  02_compare_rule_vs_ml.ipynb  02_error_analysis.ipynb
scripts/: __init__.py  build_action_candidates.py  build_score_results.py  build_sqlite_warehouse.py  build_timeseries_fixture.py  evaluate_rolling_windows.py  evaluate_saved_ml_model.py  export_sqlite_feature_rows.py  inspect_negative_sampling.py  inspect_score_calibration.py  review_queue_summary.py  train_ml_baseline.py
tests/: test_build_action_candidates.py  test_build_score_results.py  test_calibration.py  test_decision_policy.py  test_error_analysis.py  test_evaluation.py  test_local_log_store.py  test_metrics.py  test_ml_baseline.py  test_negative_sampling.py  test_production_schema.py  test_review_queue_summary.py  test_rolling_window.py  test_schema.py  test_scoring.py  test_scoring_api.py  test_sqlite_warehouse.py
(+34 files in other folders)
