[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "abuse-detection-learning"
version = "0.1.0"
description = "Learning project for abuse detection scoring and evaluation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

