[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "abuse-detection-learning"
version = "0.1.0"
description = "Learning project for abuse detection scoring and evaluation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "pandas>=2.0",
    "pydantic>=2.8",
    "scikit-learn>=1.4",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29,<7",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
